--- a/index.html
+++ b/index.html
@@ -289,9 +289,10 @@
                 detailsHtml += '<table style="width:100%; margin-top:12px; border-collapse:separate; border-spacing:0 8px;">';
                 Object.entries(salaries[id]).forEach(([key, value]) => {
                     let isNumber = /^-?\d+(\.\d+)?$/.test(value);
+                    let showCurrency = isNumber && key !== 'Rider ID';
                     detailsHtml += `<tr style='background:#f7f7fa; border-radius:12px; box-shadow:0 1px 8px #b6c7e611;'>
                         <td style='padding:10px 8px; font-size:1.08rem; color:#1e3c72; font-weight:700; border-radius:12px 0 0 12px;'>${key}</td>
-                        <td style='padding:10px 8px; font-size:1.08rem; text-align:left; color:${isNumber ? '#6c2ad2' : '#1e3c72'}; font-weight:900; border-radius:0 12px 12px 0;'>${value} ${isNumber ? 'جنيه' : ''}</td>
+                        <td style='padding:10px 8px; font-size:1.08rem; text-align:left; color:${isNumber ? '#6c2ad2' : '#1e3c72'}; font-weight:900; border-radius:0 12px 12px 0;'>${value} ${showCurrency ? 'جنيه' : ''}</td>
                     </tr>`;
                 });
                 detailsHtml += '</table>';
