--- a/index.html
+++ b/index.html
@@ -10,44 +10,54 @@
             margin: 0;
             padding: 0;
             font-family: 'Cairo', sans-serif;
-            background: linear-gradient(135deg, #1e3c72 0%, #2a5298 100%);
             min-height: 100vh;
             color: #fff;
             display: flex;
             flex-direction: column;
             align-items: center;
+            overflow-x: hidden;
+            background: url('https://images.unsplash.com/photo-1605379399642-870262d3d051?auto=format&fit=crop&w=1200&q=80') center center/cover no-repeat fixed;
+        }
+        .overlay {
+            position: fixed;
+            top: 0; left: 0; right: 0; bottom: 0;
+            width: 100vw; height: 100vh;
+            background: linear-gradient(120deg, #1e3c72cc 0%, #2a5298cc 60%, #ffcc3340 100%);
+            z-index: 0;
         }
         .header {
-            margin-top: 40px;
-            font-size: 3rem;
+            margin-top: 32px;
+            font-size: 2.7rem;
             font-weight: bold;
             letter-spacing: 2px;
-            text-shadow: 0 6px 24px #000a, 0 1px 0 #ffcc33;
-            background: linear-gradient(90deg, #ffb347, #ffcc33 60%, #fffbe6 100%);
-            -webkit-background-clip: text;
-            background-clip: text;
-            -webkit-text-fill-color: transparent;
+            text-shadow: 0 8px 32px #000a, 0 2px 0 #fff;
+            color: #fff;
+            position: relative;
+            z-index: 2;
+            text-align: center;
         }
         .card {
-            background: rgba(255,255,255,0.10);
-            border-radius: 28px;
+            background: rgba(255,255,255,0.18);
+            border-radius: 32px;
             box-shadow: 0 12px 40px 0 rgba(31, 38, 135, 0.37);
-            backdrop-filter: blur(10px);
-            border: 2px solid #ffcc33;
-            padding: 40px 32px 32px 32px;
-            margin: 32px 0;
-            width: 98%;
-            max-width: 520px;
+            backdrop-filter: blur(16px);
+            border: 3px solid #ffcc33;
+            padding: 32px 24px 24px 24px;
+            margin: 24px 0;
+            width: 99%;
+            max-width: 420px;
             position: relative;
+            z-index: 2;
+            text-align: center;
         }
         .input-section {
             display: flex;
             flex-direction: column;
             align-items: center;
-            margin-bottom: 22px;
+            margin-bottom: 18px;
         }
         .input-label {
-            font-size: 1.3rem;
+            font-size: 1.2rem;
             margin-bottom: 10px;
             color: #ffcc33;
             font-weight: bold;
@@ -56,15 +66,21 @@
         .input-box {
             padding: 12px;
             border-radius: 10px;
-            border: 1.5px solid #ffcc33;
+            border: 2px solid #ffcc33;
             font-size: 1.15rem;
             margin-bottom: 12px;
-            width: 85%;
+            width: 92%;
             max-width: 260px;
             background: #fffbe6;
             color: #1e3c72;
             font-weight: bold;
             box-shadow: 0 2px 8px #0001;
+            transition: border 0.2s;
+            text-align: center;
+        }
+        .input-box:focus {
+            border: 2.5px solid #ffb347;
+            outline: none;
         }
         .search-btn {
             background: linear-gradient(90deg, #ffb347, #ffcc33 80%, #fffbe6 100%);
@@ -72,41 +88,101 @@
             border: none;
             border-radius: 10px;
             padding: 12px 32px;
-            font-size: 1.2rem;
+            font-size: 1.18rem;
             font-weight: bold;
             cursor: pointer;
             box-shadow: 0 4px 16px #0002;
             transition: background 0.2s, transform 0.2s;
+            margin-bottom: 12px;
         }
         .search-btn:hover {
             background: linear-gradient(90deg, #ffcc33, #ffb347 80%, #fffbe6 100%);
-            transform: scale(1.05);
+            transform: scale(1.07);
         }
         .result-section {
-            margin-top: 22px;
+            margin-top: 16px;
             width: 100%;
             display: flex;
             justify-content: center;
         }
         .salary-card {
-            background: rgba(255,255,255,0.22);
-            border-radius: 18px;
-            padding: 28px 22px;
-            box-shadow: 0 8px 32px #0003;
-            min-width: 260px;
+            background: linear-gradient(135deg, #eaf6ff 0%, #dbeafe 100%);
+            border-radius: 44px;
+            padding: 48px 38px 38px 38px;
+            box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.12), 0 2px 24px #b6c7e620;
+            min-width: 320px;
             text-align: right;
             color: #1e3c72;
-            font-size: 1.18rem;
-            font-weight: bold;
-            border: 1.5px solid #ffcc33;
+            font-size: 1.24rem;
+            font-weight: 900;
+            font-family: 'Cairo', sans-serif;
+            border: 2.5px solid #b6c7e6;
             animation: fadeIn 0.7s;
+            position: relative;
+            overflow: hidden;
+        }
+        .salary-card::before {
+            content: "";
+            position: absolute;
+            top: 0; left: 0; right: 0; bottom: 0;
+            background: linear-gradient(120deg, #e3f0ffcc 0%, #b6c7e633 60%, #fafdffcc 100%);
+            opacity: 0.6;
+            z-index: 0;
+            border-radius: 32px;
+        }
+        .salary-card-content {
+            position: relative;
+            z-index: 1;
+        }
+        .salary-row {
+            margin-bottom: 18px;
+            padding-bottom: 8px;
+            border-bottom: 2px solid #b6c7e6;
+            display: flex;
+            align-items: center;
+            gap: 10px;
+            font-size: 1.12rem;
+            transition: background 0.2s;
+        }
+        .salary-row:hover {
+            background: #e3f0ff55;
+            border-radius: 12px;
+        }
+        .salary-row:last-child {
+            border-bottom: none;
+        }
+        .salary-icon {
+            width: 22px;
+            height: 22px;
+            margin-left: 4px;
+            filter: drop-shadow(0 2px 4px #ffd70088);
+        }
+        .salary-key {
+            flex: 1;
+            color: #2a5298;
+            font-weight: 900;
+            letter-spacing: 0.5px;
+            font-family: 'Cairo', sans-serif;
+        }
+        .salary-value {
+            color: #1e3c72;
+            font-weight: 900;
+            font-family: 'Cairo', sans-serif;
+            text-shadow: 0 2px 8px #b6c7e633;
+        }
+        .salary-value.number {
+            color: #27ae60 !important;
+            font-weight: 900;
+            font-family: 'Cairo', sans-serif;
+            text-shadow: 0 2px 8px #27ae6022;
+        }
         }
         @keyframes fadeIn {
             from { opacity: 0; transform: translateY(30px); }
             to { opacity: 1; transform: translateY(0); }
         }
         .salary-row {
-            margin-bottom: 12px;
+            margin-bottom: 10px;
             padding-bottom: 4px;
             border-bottom: 1px solid #e0e0e0;
         }
@@ -118,31 +194,56 @@
             font-weight: bold;
             text-align: center;
         }
+        .bottom-img {
+            position: fixed;
+            bottom: 10px;
+            left: 50%;
+            transform: translateX(-50%);
+            width: 180px;
+            z-index: 2;
+        }
         @media (max-width: 600px) {
             .card {
-                padding: 18px 6px;
-                max-width: 98vw;
+                padding: 10px 2px;
+                max-width: 99vw;
             }
             .header {
-                font-size: 2rem;
+                font-size: 1.3rem;
             }
             .salary-card {
-                padding: 14px 6px;
-                font-size: 1rem;
+                padding: 8px 2px;
+                font-size: 0.9rem;
+            }
+            .bottom-img {
+                width: 120px;
             }
         }
     </style>
 </head>
 <body>
-    <div class="header">اعرف قبضك</div>
-    <div class="card">
-        <div class="input-section">
-            <label for="riderId" class="input-label">أدخل Rider ID الخاص بك:</label>
-            <input type="text" id="riderId" class="input-box" placeholder="مثال: 1023">
-            <button onclick="showSalary()" class="search-btn">اعرض القبض</button>
+    <div class="overlay"></div>
+    <div class="header" style="margin-bottom:0; font-family:'Cairo',sans-serif; letter-spacing:3px; font-size:2.8rem; color:#1e3c72; text-shadow:0 2px 12px #fff,0 1px 0 #6c2ad2;">JASSIN</div>
+    <div class="card" style="background:#fff; border-radius:28px; box-shadow:0 4px 24px #0002; border:none; padding:0; max-width:430px; width:99%; margin-top:18px;">
+        <!-- تم إزالة صورة الشعار بناءً على طلب المستخدم -->
+        <div style="background:#f7f7fa; border-radius:18px; margin:18px 18px 0 18px; box-shadow:0 1px 8px #b6c7e611; padding:18px 18px 10px 18px; text-align:center; font-family:'Cairo',sans-serif; font-weight:900; color:#1e3c72; font-size:1.15rem; border:1.5px solid #e0e0e0;">
+            <label for="riderId" style="margin-left:8px; color:#6c2ad2; font-weight:900; font-size:1.18rem;">Rider ID</label>
+            <input type="text" id="riderId" class="input-box" placeholder="ادخل رقمك مثال :1023" style="margin-right:8px; width:160px; font-size:1.15rem; font-weight:900; text-align:center;">
+            <button onclick="showSalary()" class="search-btn" style="margin-top:10px;">
+                <span style="display:inline-flex; align-items:center; gap:8px;">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="#1e3c72" viewBox="0 0 24 24" style="vertical-align:middle;"><path d="M21.71 20.29l-3.388-3.388A8.931 8.931 0 0 0 19 11a9 9 0 1 0-9 9c2.386 0 4.574-.876 6.292-2.378l3.388 3.388a1 1 0 0 0 1.414-1.414zM4 11a7 7 0 1 1 7 7a7 7 0 0 1-7-7z"></path></svg>
+                    اعرض القبض
+                </span>
+            </button>
         </div>
-        <div id="result" class="result-section" style="display:none;"></div>
+        <!-- تبويب تاريخ الأسبوع -->
+        <div style="background:#f7f7fa; border-radius:18px; margin:18px 18px 0 18px; box-shadow:0 1px 8px #b6c7e611; padding:12px 18px; text-align:right; font-family:'Cairo',sans-serif; font-weight:900; color:#1e3c72; font-size:1.08rem; border:1.5px solid #e0e0e0;">
+            <label for="weekDate" style="margin-left:8px; color:#2a5298; font-weight:700;">تاريخ الأسبوع:</label>
+            <input type="text" id="weekDate" placeholder="مثال: 18-8 إلى 24-8" style="padding:7px 12px; border-radius:8px; border:1.5px solid #b6c7e6; font-size:1rem; font-family:'Cairo',sans-serif; font-weight:700; color:#1e3c72; width:160px;">
+        </div>
+        <!-- تفاصيل القبض -->
+        <div id="result" class="result-section" style="display:none; margin-top:0;"></div>
     </div>
+    <!-- تم إزالة الصورة الصغيرة في الأسفل بناءً على طلب المستخدم -->
     <script>
         // إعدادات Google Sheets API
         const SHEET_ID = '1W1cwqjeAFG2zcdRUQJIgAP_0EKtF9bsBaJ5ROPgR-WU'; // ضع هنا ID الشيت
@@ -182,11 +283,26 @@
             const id = document.getElementById('riderId').value.trim();
             const resultDiv = document.getElementById('result');
             if (salaries[id]) {
-                let detailsHtml = '';
+                // جدول تفاصيل القبض
+                let detailsHtml = '<div style="padding:0 18px 0 18px;">';
+                detailsHtml += '<div style="margin:18px 0 0 0; font-size:1.18rem; font-weight:900; color:#1e3c72;">تفاصيل القبض</div>';
+                detailsHtml += '<table style="width:100%; margin-top:12px; border-collapse:separate; border-spacing:0 8px;">';
                 Object.entries(salaries[id]).forEach(([key, value]) => {
-                    detailsHtml += `<div class='salary-row'><span>${key}:</span> <b>${value}</b></div>`;
+                    let isNumber = /^-?\d+(\.\d+)?$/.test(value);
+                    let showCurrency = isNumber && key !== 'Rider ID';
+                    detailsHtml += `<tr style='background:#f7f7fa; border-radius:12px; box-shadow:0 1px 8px #b6c7e611;'>
+                        <td style='padding:10px 8px; font-size:1.08rem; color:#1e3c72; font-weight:700; border-radius:12px 0 0 12px;'>${key}</td>
+                        <td style='padding:10px 8px; font-size:1.08rem; text-align:left; color:${isNumber ? '#6c2ad2' : '#1e3c72'}; font-weight:900; border-radius:0 12px 12px 0;'>${value} ${showCurrency ? 'جنيه' : ''}</td>
+                    </tr>`;
                 });
-                resultDiv.innerHTML = `<div class='salary-card'>${detailsHtml}</div>`;
+                detailsHtml += '</table>';
+                // القبض النهائي
+                let total = Object.values(salaries[id]).filter(v => /^-?\d+(\.\d+)?$/.test(v)).pop();
+                if (total) {
+                    detailsHtml += `<div style='margin:28px 0 0 0; text-align:center;'><div style='background:linear-gradient(90deg,#6c2ad2 0%,#4f8cff 100%); color:#fff; font-size:2.6rem; font-weight:900; border-radius:18px; padding:22px 0; box-shadow:0 2px 16px #6c2ad244;'>${total} جنيه</div><div style='margin-top:8px; color:#6c2ad2; font-size:1.15rem; font-weight:700;'>ما تم صرفه لك (الصافي الاجمالي)</div></div>`;
+                }
+                detailsHtml += '</div>';
+                resultDiv.innerHTML = detailsHtml;
                 resultDiv.style.display = 'block';
             } else {
                 resultDiv.innerHTML = `<div class='salary-card not-found'>لا يوجد بيانات لهذا Rider ID</div>`;
