--- a/index.html
+++ b/index.html
@@ -10,105 +10,138 @@
             margin: 0;
             padding: 0;
             font-family: 'Cairo', sans-serif;
-            background: linear-gradient(135deg, #1e3c72 0%, #2a5298 100%);
+            background: linear-gradient(120deg, #1e3c72 0%, #2a5298 60%, #ffcc33 100%);
             min-height: 100vh;
             color: #fff;
             display: flex;
             flex-direction: column;
             align-items: center;
+            overflow-x: hidden;
         }
         .header {
-            margin-top: 40px;
-            font-size: 3rem;
+            margin-top: 48px;
+            font-size: 3.5rem;
             font-weight: bold;
-            letter-spacing: 2px;
-            text-shadow: 0 6px 24px #000a, 0 1px 0 #ffcc33;
-            background: linear-gradient(90deg, #ffb347, #ffcc33 60%, #fffbe6 100%);
+            letter-spacing: 2.5px;
+            text-shadow: 0 10px 40px #000a, 0 2px 0 #ffcc33;
+            background: linear-gradient(90deg, #ffb347 10%, #ffcc33 60%, #fffbe6 100%);
             -webkit-background-clip: text;
             background-clip: text;
             -webkit-text-fill-color: transparent;
+            filter: drop-shadow(0 0 12px #ffcc33aa);
+            animation: shine 2.5s infinite linear;
+        }
+        @keyframes shine {
+            0% { filter: drop-shadow(0 0 12px #ffcc33aa); }
+            50% { filter: drop-shadow(0 0 32px #ffcc33cc); }
+            100% { filter: drop-shadow(0 0 12px #ffcc33aa); }
         }
         .card {
-            background: rgba(255,255,255,0.10);
-            border-radius: 28px;
-            box-shadow: 0 12px 40px 0 rgba(31, 38, 135, 0.37);
-            backdrop-filter: blur(10px);
-            border: 2px solid #ffcc33;
-            padding: 40px 32px 32px 32px;
-            margin: 32px 0;
-            width: 98%;
-            max-width: 520px;
+            background: rgba(255,255,255,0.18);
+            border-radius: 40px;
+            box-shadow: 0 24px 64px 0 rgba(31, 38, 135, 0.37), 0 0 0 8px #ffcc3340;
+            backdrop-filter: blur(16px);
+            border: 3px solid #ffcc33;
+            padding: 56px 44px 44px 44px;
+            margin: 44px 0;
+            width: 99%;
+            max-width: 600px;
             position: relative;
+            transition: box-shadow 0.3s;
+        }
+        .card:hover {
+            box-shadow: 0 32px 80px 0 #ffcc3380, 0 0 0 12px #ffcc3340;
         }
         .input-section {
             display: flex;
             flex-direction: column;
             align-items: center;
-            margin-bottom: 22px;
+            margin-bottom: 36px;
         }
         .input-label {
-            font-size: 1.3rem;
-            margin-bottom: 10px;
+            font-size: 1.5rem;
+            margin-bottom: 16px;
             color: #ffcc33;
             font-weight: bold;
-            text-shadow: 0 2px 8px #0002;
+            text-shadow: 0 2px 12px #0002;
+            letter-spacing: 1px;
         }
         .input-box {
-            padding: 12px;
-            border-radius: 10px;
-            border: 1.5px solid #ffcc33;
-            font-size: 1.15rem;
-            margin-bottom: 12px;
-            width: 85%;
-            max-width: 260px;
+            padding: 16px;
+            border-radius: 16px;
+            border: 2.5px solid #ffcc33;
+            font-size: 1.25rem;
+            margin-bottom: 18px;
+            width: 90%;
+            max-width: 320px;
             background: #fffbe6;
             color: #1e3c72;
             font-weight: bold;
-            box-shadow: 0 2px 8px #0001;
+            box-shadow: 0 4px 16px #ffcc3320;
+            transition: border 0.2s, box-shadow 0.2s;
+        }
+        .input-box:focus {
+            border: 3px solid #ffb347;
+            outline: none;
+            box-shadow: 0 0 24px #ffcc3340;
         }
         .search-btn {
             background: linear-gradient(90deg, #ffb347, #ffcc33 80%, #fffbe6 100%);
             color: #1e3c72;
             border: none;
-            border-radius: 10px;
-            padding: 12px 32px;
-            font-size: 1.2rem;
+            border-radius: 16px;
+            padding: 16px 44px;
+            font-size: 1.3rem;
             font-weight: bold;
             cursor: pointer;
-            box-shadow: 0 4px 16px #0002;
-            transition: background 0.2s, transform 0.2s;
+            box-shadow: 0 8px 32px #ffcc3320;
+            transition: background 0.2s, transform 0.2s, box-shadow 0.2s;
+            position: relative;
+            overflow: hidden;
+        }
+        .search-btn:after {
+            content: '';
+            position: absolute;
+            left: 0; top: 0; right: 0; bottom: 0;
+            background: linear-gradient(120deg, #fffbe6 0%, #ffcc33 100%);
+            opacity: 0.1;
+            z-index: 0;
         }
         .search-btn:hover {
             background: linear-gradient(90deg, #ffcc33, #ffb347 80%, #fffbe6 100%);
-            transform: scale(1.05);
+            transform: scale(1.09);
+            box-shadow: 0 12px 40px #ffcc3340;
         }
         .result-section {
-            margin-top: 22px;
+            margin-top: 36px;
             width: 100%;
             display: flex;
             justify-content: center;
         }
         .salary-card {
-            background: rgba(255,255,255,0.22);
-            border-radius: 18px;
-            padding: 28px 22px;
-            box-shadow: 0 8px 32px #0003;
-            min-width: 260px;
+            background: rgba(255,255,255,0.32);
+            border-radius: 28px;
+            padding: 40px 32px;
+            box-shadow: 0 16px 48px #ffcc3320, 0 0 0 4px #ffcc3340;
+            min-width: 320px;
             text-align: right;
             color: #1e3c72;
-            font-size: 1.18rem;
+            font-size: 1.28rem;
             font-weight: bold;
-            border: 1.5px solid #ffcc33;
+            border: 2.5px solid #ffcc33;
             animation: fadeIn 0.7s;
+            position: relative;
         }
         @keyframes fadeIn {
             from { opacity: 0; transform: translateY(30px); }
             to { opacity: 1; transform: translateY(0); }
         }
         .salary-row {
-            margin-bottom: 12px;
-            padding-bottom: 4px;
-            border-bottom: 1px solid #e0e0e0;
+            margin-bottom: 18px;
+            padding-bottom: 8px;
+            border-bottom: 1.5px dashed #e0e0e0;
+            font-size: 1.18rem;
+            letter-spacing: 0.5px;
         }
         .salary-row:last-child {
             border-bottom: none;
@@ -117,14 +150,15 @@
             color: #ff4444;
             font-weight: bold;
             text-align: center;
+            font-size: 1.2rem;
         }
         @media (max-width: 600px) {
             .card {
                 padding: 18px 6px;
-                max-width: 98vw;
+                max-width: 99vw;
             }
             .header {
-                font-size: 2rem;
+                font-size: 2.2rem;
             }
             .salary-card {
                 padding: 14px 6px;
