--- a/index.html
+++ b/index.html
@@ -168,14 +168,32 @@
     </style>
 </head>
 <body>
-    <div class="header">اعرف قبضك</div>
-    <div class="card">
-        <div class="input-section">
-            <label for="riderId" class="input-label">أدخل Rider ID الخاص بك:</label>
-            <input type="text" id="riderId" class="input-box" placeholder="مثال: 1023">
-            <button onclick="showSalary()" class="search-btn">اعرض القبض</button>
+    <div class="overlay"></div>
+    <div class="header" style="margin-bottom:0; font-family:'Cairo',sans-serif; letter-spacing:2px; font-size:3rem; color:transparent; background:linear-gradient(90deg,#6c2ad2 0%,#9b5cf0 45%,#ffcc33 100%); -webkit-background-clip:text; background-clip:text; -webkit-text-fill-color:transparent; text-shadow:0 8px 28px rgba(155,92,240,0.18), 0 2px 8px rgba(255,204,51,0.12); filter:drop-shadow(0 0 18px rgba(155,92,240,0.18));">اعرف قبضك</div>
+    <div class="card" style="background:#fff; border-radius:28px; box-shadow:0 4px 24px #0002; border:none; padding:0; max-width:430px; width:99%; margin-top:18px;">
+        Start-Process "C:\Users\Grand PC\Downloads\pilot_salaries.html"        <!-- حقل البحث عن Rider ID -->
+        <div style="padding:18px 18px 8px 18px; text-align:center;">
+            <input id="riderId" class="input-box" type="text" placeholder="أدخل Rider ID..." style="width:62%; max-width:240px; display:inline-block; margin-right:8px;">
+            <button onclick="showSalary()" class="search-btn" style="padding:10px 14px; font-size:1rem; display:inline-block;">عرض</button>
         </div>
-        <div id="result" class="result-section" style="display:none;"></div>
+        <!-- شعار ثابت بسيط (مخفف المسافات البيضاء حول الصورة) -->
+        <div style="background:transparent; border-radius:18px; margin:6px 6px 0 6px; box-shadow:none; padding:8px 0 4px 0; text-align:center; font-family:'Cairo',sans-serif; color:#1e3c72; font-size:1.15rem; border:none;">
+            <div style="display:flex; justify-content:center;">
+                <div style="display:flex; flex-direction:column; align-items:center; gap:6px;">
+                    <div id="pilotPhotoWrap" style="width:220px; height:220px; margin:0 auto; border-radius:14px; overflow:hidden; background:transparent; box-shadow:none; display:block; cursor:pointer;">
+                        <img id="pilotPhotoImg" src="pilot_photo.jpg" alt="pilot" style="width:100%; height:100%; object-fit:cover; display:block;">
+                    </div>
+                    <input id="pilotPhotoFile" type="file" accept="image/*" style="display:none">
+                </div>
+            </div>
+        </div>
+        <!-- تبويب تاريخ الأسبوع -->
+        <div style="background:#f7f7fa; border-radius:18px; margin:18px 18px 0 18px; box-shadow:0 1px 8px #b6c7e611; padding:12px 18px; text-align:right; font-family:'Cairo',sans-serif; font-weight:900; color:#1e3c72; font-size:1.08rem; border:1.5px solid #e0e0e0;">
+            <label for="weekDate" style="margin-left:8px; color:#2a5298; font-weight:700;">تاريخ الأسبوع:</label>
+            <input type="text" id="weekDate" placeholder="مثال: 18-8 إلى 24-8" style="padding:7px 12px; border-radius:8px; border:1.5px solid #b6c7e6; font-size:1rem; font-family:'Cairo',sans-serif; font-weight:700; color:#1e3c72; width:160px;">
+        </div>
+        <!-- تفاصيل القبض -->
+        <div id="result" class="result-section" style="display:none; margin-top:0;"></div>
     </div>
     <script>
         // إعدادات Google Sheets API
@@ -216,17 +234,67 @@
             const id = document.getElementById('riderId').value.trim();
             const resultDiv = document.getElementById('result');
             if (salaries[id]) {
-                let detailsHtml = '';
+                // جدول تفاصيل القبض
+                let detailsHtml = '<div style="padding:0 18px 0 18px;">';
+                detailsHtml += '<div style="margin:18px 0 0 0; font-size:1.18rem; font-weight:900; color:#1e3c72;">تفاصيل القبض</div>';
+                detailsHtml += '<table style="width:100%; margin-top:12px; border-collapse:separate; border-spacing:0 8px;">';
                 Object.entries(salaries[id]).forEach(([key, value]) => {
-                    detailsHtml += `<div class='salary-row'><span>${key}:</span> <b>${value}</b></div>`;
+                    let isNumber = /^-?\d+(\.\d+)?$/.test(value);
+                    let showCurrency = isNumber && key !== 'Rider ID';
+                    detailsHtml += `<tr style='background:#f7f7fa; border-radius:12px; box-shadow:0 1px 8px #b6c7e611;'>
+                        <td style='padding:10px 8px; font-size:1.08rem; color:#1e3c72; font-weight:700; border-radius:12px 0 0 12px;'>${key}</td>
+                        <td style='padding:10px 8px; font-size:1.08rem; text-align:left; color:${isNumber ? '#6c2ad2' : '#1e3c72'}; font-weight:900; border-radius:0 12px 12px 0;'>${value} ${showCurrency ? 'جنيه' : ''}</td>
+                    </tr>`;
                 });
-                resultDiv.innerHTML = `<div class='salary-card'>${detailsHtml}</div>`;
+                detailsHtml += '</table>';
+                // القبض النهائي
+                let total = Object.values(salaries[id]).filter(v => /^-?\d+(\.\d+)?$/.test(v)).pop();
+                if (total) {
+                    detailsHtml += `<div style='margin:28px 0 0 0; text-align:center;'><div style='background:linear-gradient(90deg,#6c2ad2 0%,#4f8cff 100%); color:#fff; font-size:2.6rem; font-weight:900; border-radius:18px; padding:22px 0; box-shadow:0 2px 16px #6c2ad244;'>${total} جنيه</div><div style='margin-top:8px; color:#6c2ad2; font-size:1.15rem; font-weight:700;'>ما تم صرفه لك (الصافي الاجمالي)</div></div>`;
+                }
+                detailsHtml += '</div>';
+                resultDiv.innerHTML = detailsHtml;
                 resultDiv.style.display = 'block';
             } else {
                 resultDiv.innerHTML = `<div class='salary-card not-found'>لا يوجد بيانات لهذا Rider ID</div>`;
                 resultDiv.style.display = 'block';
             }
         }
+        // --- Pilot photo preview & persistence ---
+        (function(){
+            const photoWrap = document.getElementById('pilotPhotoWrap');
+            const fileInput = document.getElementById('pilotPhotoFile');
+            const img = document.getElementById('pilotPhotoImg');
+            const STORAGE_KEY = 'pilot_photo_dataurl_v1';
+
+            function setDefault() {
+                img.src = 'pilot_photo.jpg';
+            }
+
+            // load saved photo
+            try {
+                const saved = localStorage.getItem(STORAGE_KEY);
+                if (saved) img.src = saved;
+            } catch(e){ /* ignore */ }
+
+            // click on wrapper to choose a file
+            photoWrap.addEventListener('click', ()=> fileInput.click());
+            fileInput.addEventListener('change', (ev)=>{
+                const f = ev.target.files && ev.target.files[0];
+                if (!f) return;
+                const reader = new FileReader();
+                reader.onload = function(e){
+                    img.src = e.target.result;
+                    try { localStorage.setItem(STORAGE_KEY, e.target.result); } catch(e){}
+                };
+                reader.readAsDataURL(f);
+            });
+            // double-click the wrapper to clear back to default
+            photoWrap.addEventListener('dblclick', ()=>{
+                setDefault();
+                try { localStorage.removeItem(STORAGE_KEY); } catch(e){}
+            });
+        })();
     </script>
 </body>
 </html>
